--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -35,6 +35,8 @@ body {
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     background-color: $white-color;
     font-size: 16px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 a {
